emoji_window/emoji_window.h


typedef void (__stdcall *TAB_CALLBACK)(HWND hTabControl, int selectedIndex);
typedef void (__stdcall *TAB_CLOSE_CALLBACK)(HWND hTabControl, int index);
typedef void (__stdcall *TAB_RIGHTCLICK_CALLBACK)(HWND hTabControl, int index, int x, int y);
typedef void (__stdcall *TAB_DBLCLICK_CALLBACK)(HWND hTabControl, int index);
typedef void (__stdcall *MenuItemClickCallback)(int menu_id, int item_id);
typedef void (__stdcall *DataGridCellClickCallback)(HWND hGrid, int row, int col);
typedef void (__stdcall *DataGridCellDoubleClickCallback)(HWND hGrid, int row, int col);
typedef void (__stdcall *DataGridCellValueChangedCallback)(HWND hGrid, int row, int col);
typedef void (__stdcall *DataGridColumnHeaderClickCallback)(HWND hGrid, int col);
typedef void (__stdcall *DataGridSelectionChangedCallback)(HWND hGrid, int row, int col);
    __declspec(dllexport) void __stdcall SetTabCallback(
        HWND hTabControl,
        TAB_CALLBACK pCallback
    );
    __declspec(dllexport) void __stdcall UpdateTabControlLayout(
        HWND hTabControl
    );
    __declspec(dllexport) BOOL __stdcall RedrawTabControl(
        HWND hTabControl
    );
    __declspec(dllexport) int __stdcall SetTabItemSize(
        HWND hTab,
        int width,
        int height
    );
    __declspec(dllexport) int __stdcall SetTabFont(
        HWND hTab,
        const unsigned char* fontName,
        int fontNameLen,
        float fontSize
    );
    __declspec(dllexport) int __stdcall SetTabColors(
        HWND hTab,
        UINT32 selectedBg,
        UINT32 unselectedBg,
        UINT32 selectedText,
        UINT32 unselectedText
    );
    __declspec(dllexport) int __stdcall SetTabIndicatorColor(
        HWND hTab,
        UINT32 color
    );
    __declspec(dllexport) int __stdcall SetTabPadding(
        HWND hTab,
        int horizontal,
        int vertical
    );
    __declspec(dllexport) int __stdcall SetTabClosable(
        HWND hTab,
        int closable
    );
    __declspec(dllexport) int __stdcall SetTabCloseCallback(
        HWND hTab,
        TAB_CLOSE_CALLBACK callback
    );
    __declspec(dllexport) int __stdcall SetTabRightClickCallback(
        HWND hTab,
        TAB_RIGHTCLICK_CALLBACK callback
    );
    __declspec(dllexport) int __stdcall SetTabDraggable(
        HWND hTab,
        int draggable
    );
    __declspec(dllexport) int __stdcall SetTabDoubleClickCallback(
        HWND hTab,
        TAB_DBLCLICK_CALLBACK callback
    );
    __declspec(dllexport) int __stdcall SetTabPosition(
        HWND hTab,
        int position
    );
    __declspec(dllexport) int __stdcall SetTabAlignment(
        HWND hTab,
        int align
    );
    __declspec(dllexport) int __stdcall SetTabScrollable(
        HWND hTab,
        int scrollable
    );
    __declspec(dllexport) HWND __stdcall CreateMenuBar(
        HWND hWindow
    );
    __declspec(dllexport) void __stdcall DestroyMenuBar(
        HWND hMenuBar
    );
    __declspec(dllexport) int __stdcall MenuBarAddItem(
        HWND hMenuBar,
        const unsigned char* text_bytes,
        int text_len,
        int item_id
    );
    __declspec(dllexport) int __stdcall MenuBarAddSubItem(
        HWND hMenuBar,
        int parent_item_id,
        const unsigned char* text_bytes,
        int text_len,
        int item_id
    );
    __declspec(dllexport) void __stdcall SetMenuBarPlacement(
        HWND hMenuBar,
        int x, int y, int width, int height
    );
    __declspec(dllexport) void __stdcall SetMenuBarCallback(
        HWND hMenuBar,
        MenuItemClickCallback callback
    );
    __declspec(dllexport) BOOL __stdcall MenuBarUpdateSubItemText(
        HWND hMenuBar,
        int parent_item_id,
        int item_id,
        const unsigned char* text_bytes,
        int text_len
    );
    __declspec(dllexport) HWND __stdcall CreateEmojiPopupMenu(
        HWND hOwner
    );
    __declspec(dllexport) void __stdcall DestroyEmojiPopupMenu(
        HWND hPopupMenu
    );
    __declspec(dllexport) int __stdcall PopupMenuAddItem(
        HWND hPopupMenu,
        const unsigned char* text_bytes,
        int text_len,
        int item_id
    );
    __declspec(dllexport) int __stdcall PopupMenuAddSubItem(
        HWND hPopupMenu,
        int parent_item_id,
        const unsigned char* text_bytes,
        int text_len,
        int item_id
    );
    __declspec(dllexport) void __stdcall BindControlMenu(
        HWND hControl,
        HWND hPopupMenu
    );
    __declspec(dllexport) void __stdcall BindButtonMenu(
        HWND hParent,
        int button_id,
        HWND hPopupMenu
    );
    __declspec(dllexport) void __stdcall ShowContextMenu(
        HWND hPopupMenu,
        int x,
        int y
    );
    __declspec(dllexport) void __stdcall SetPopupMenuCallback(
        HWND hPopupMenu,
        MenuItemClickCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreateDataGridView(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL virtual_mode,
        BOOL zebra_stripe,
        UINT32 fg_color,
        UINT32 bg_color
    );
    __declspec(dllexport) int __stdcall DataGrid_AddTextColumn(
        HWND hGrid,
        const unsigned char* header_bytes,
        int header_len,
        int width
    );
    __declspec(dllexport) int __stdcall DataGrid_AddCheckBoxColumn(
        HWND hGrid,
        const unsigned char* header_bytes,
        int header_len,
        int width
    );
    __declspec(dllexport) int __stdcall DataGrid_AddButtonColumn(
        HWND hGrid,
        const unsigned char* header_bytes,
        int header_len,
        int width
    );
    __declspec(dllexport) void __stdcall DataGrid_SetColumnWidth(
        HWND hGrid,
        int col_index,
        int width
    );
    __declspec(dllexport) int __stdcall DataGrid_AddRow(
        HWND hGrid
    );
    __declspec(dllexport) void __stdcall DataGrid_RemoveRow(
        HWND hGrid,
        int row_index
    );
    __declspec(dllexport) void __stdcall DataGrid_ClearRows(
        HWND hGrid
    );
    __declspec(dllexport) int __stdcall DataGrid_GetRowCount(
        HWND hGrid
    );
    __declspec(dllexport) void __stdcall DataGrid_SetCellText(
        HWND hGrid,
        int row, int col,
        const unsigned char* text_bytes,
        int text_len
    );
    __declspec(dllexport) int __stdcall DataGrid_GetCellText(
        HWND hGrid,
        int row, int col,
        unsigned char* buffer,
        int buffer_size
    );
    __declspec(dllexport) void __stdcall DataGrid_SetCellChecked(
        HWND hGrid,
        int row, int col,
        BOOL checked
    );
    __declspec(dllexport) BOOL __stdcall DataGrid_GetCellChecked(
        HWND hGrid,
        int row, int col
    );
    __declspec(dllexport) void __stdcall DataGrid_SetCellStyle(
        HWND hGrid,
        int row, int col,
        UINT32 fg_color,
        UINT32 bg_color,
        BOOL bold,
        BOOL italic
    );
    __declspec(dllexport) int __stdcall DataGrid_GetSelectedRow(
        HWND hGrid
    );
    __declspec(dllexport) int __stdcall DataGrid_GetSelectedCol(
        HWND hGrid
    );
    __declspec(dllexport) void __stdcall DataGrid_SetSelectedCell(
        HWND hGrid,
        int row, int col
    );
    __declspec(dllexport) void __stdcall DataGrid_SetSelectionMode(
        HWND hGrid,
        int mode  
    );
    __declspec(dllexport) void __stdcall DataGrid_SortByColumn(
        HWND hGrid,
        int col_index,
        int sort_order  
    );
    __declspec(dllexport) void __stdcall DataGrid_SetFreezeHeader(
        HWND hGrid,
        BOOL freeze
    );
    __declspec(dllexport) void __stdcall DataGrid_SetShowGridLines(
        HWND hGrid,
        BOOL show
    );
    __declspec(dllexport) void __stdcall DataGrid_SetDefaultRowHeight(
        HWND hGrid,
        int height
    );
    __declspec(dllexport) void __stdcall DataGrid_SetHeaderHeight(
        HWND hGrid,
        int height
    );
    __declspec(dllexport) void __stdcall DataGrid_SetCellClickCallback(
        HWND hGrid,
        DataGridCellClickCallback callback
    );
    __declspec(dllexport) void __stdcall DataGrid_SetCellDoubleClickCallback(
        HWND hGrid,
        DataGridCellDoubleClickCallback callback
    );
    __declspec(dllexport) void __stdcall DataGrid_SetCellValueChangedCallback(
        HWND hGrid,
        DataGridCellValueChangedCallback callback
    );
    __declspec(dllexport) void __stdcall DataGrid_SetColumnHeaderClickCallback(
        HWND hGrid,
        DataGridColumnHeaderClickCallback callback
    );
    __declspec(dllexport) void __stdcall DataGrid_SetSelectionChangedCallback(
        HWND hGrid,
        DataGridSelectionChangedCallback callback
    );
    __declspec(dllexport) void __stdcall DataGrid_Enable(
        HWND hGrid,
        BOOL enable
    );
    __declspec(dllexport) void __stdcall DataGrid_Show(
        HWND hGrid,
        BOOL show
    );
    __declspec(dllexport) void __stdcall DataGrid_SetBounds(
        HWND hGrid,
        int x, int y, int width, int height
    );
    __declspec(dllexport) void __stdcall DataGrid_Refresh(
        HWND hGrid
    );
    __declspec(dllexport) void __stdcall DataGrid_SetColumnHeaderAlignment(
        HWND hGrid,
        int col_index,
        int alignment
    );
    __declspec(dllexport) void __stdcall DataGrid_SetColumnCellAlignment(
        HWND hGrid,
        int col_index,
        int alignment
    );