emoji_window/treeview_window.h


HWND __stdcall CreateTreeView(
    HWND parent,
    int x, int y,
    int width, int height,
    unsigned int bg_color,
    unsigned int text_color,
    void* callback_context
);
int __stdcall AddRootNode(
    HWND hwnd,
    const unsigned char* text,
    int text_len,
    const unsigned char* icon,
    int icon_len
);
int __stdcall AddChildNode(
    HWND hwnd,
    int parent_id,
    const unsigned char* text,
    int text_len,
    const unsigned char* icon,
    int icon_len
);
bool __stdcall ExpandNode(HWND hwnd, int node_id);
bool __stdcall CollapseNode(HWND hwnd, int node_id);
bool __stdcall ExpandAll(HWND hwnd);
bool __stdcall CollapseAll(HWND hwnd);