examples/Csharp/Common/EmojiWindowNative.cs


        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabPosition(IntPtr hTabControl, int position);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabAlignment(IntPtr hTabControl, int alignment);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabScrollable(IntPtr hTabControl, int scrollable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabItemSize(IntPtr hTabControl, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabFont(IntPtr hTabControl, byte[] fontBytes, int fontLen, float fontSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabColors(IntPtr hTabControl, uint selectedBg, uint unselectedBg, uint selectedText, uint unselectedText);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabIndicatorColor(IntPtr hTabControl, uint color);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabPadding(IntPtr hTabControl, int horizontal, int vertical);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabClosable(IntPtr hTabControl, int closable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabCloseCallback(IntPtr hTabControl, TabCloseCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabRightClickCallback(IntPtr hTabControl, TabRightClickCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabDraggable(IntPtr hTabControl, int draggable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabDoubleClickCallback(IntPtr hTabControl, TabDoubleClickCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetTabCallback(IntPtr hTabControl, TabCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void UpdateTabControlLayout(IntPtr hTabControl);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool RedrawTabControl(IntPtr hTabControl);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateMenuBar(IntPtr hWindow);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DestroyMenuBar(IntPtr hMenuBar);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int MenuBarAddItem(IntPtr hMenuBar, byte[] textBytes, int textLen, int itemId);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int MenuBarAddSubItem(IntPtr hMenuBar, int parentItemId, byte[] textBytes, int textLen, int itemId);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetMenuBarPlacement(IntPtr hMenuBar, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetMenuBarCallback(IntPtr hMenuBar, MenuItemClickCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool MenuBarUpdateSubItemText(IntPtr hMenuBar, int parentItemId, int itemId, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateEmojiPopupMenu(IntPtr hOwner);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DestroyEmojiPopupMenu(IntPtr hPopupMenu);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int PopupMenuAddItem(IntPtr hPopupMenu, byte[] textBytes, int textLen, int itemId);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int PopupMenuAddSubItem(IntPtr hPopupMenu, int parentItemId, byte[] textBytes, int textLen, int itemId);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void BindControlMenu(IntPtr hControl, IntPtr hPopupMenu);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void BindButtonMenu(IntPtr hParent, int buttonId, IntPtr hPopupMenu);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowContextMenu(IntPtr hPopupMenu, int x, int y);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetPopupMenuCallback(IntPtr hPopupMenu, MenuItemClickCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateDataGridView(IntPtr parent, int x, int y, int width, int height, [MarshalAs(UnmanagedType.Bool)] bool virtualMode, [MarshalAs(UnmanagedType.Bool)] bool alternateRowColor, uint fgColor, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int DataGrid_AddTextColumn(IntPtr hGrid, byte[] headerBytes, int headerLen, int width);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int DataGrid_AddCheckBoxColumn(IntPtr hGrid, byte[] headerBytes, int headerLen, int width);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int DataGrid_AddButtonColumn(IntPtr hGrid, byte[] headerBytes, int headerLen, int width);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int DataGrid_AddRow(IntPtr hGrid);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_RemoveRow(IntPtr hGrid, int rowIndex);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_ClearRows(IntPtr hGrid);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int DataGrid_GetRowCount(IntPtr hGrid);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetCellText(IntPtr hGrid, int row, int col, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int DataGrid_GetCellText(IntPtr hGrid, int row, int col, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetCellChecked(IntPtr hGrid, int row, int col, [MarshalAs(UnmanagedType.Bool)] bool isChecked);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool DataGrid_GetCellChecked(IntPtr hGrid, int row, int col);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetCellStyle(IntPtr hGrid, int row, int col, uint fgColor, uint bgColor, int bold, int italic);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int DataGrid_GetSelectedRow(IntPtr hGrid);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int DataGrid_GetSelectedCol(IntPtr hGrid);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetSelectedCell(IntPtr hGrid, int row, int col);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetSelectionMode(IntPtr hGrid, int mode);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SortByColumn(IntPtr hGrid, int col, int direction);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetShowGridLines(IntPtr hGrid, int show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetDefaultRowHeight(IntPtr hGrid, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetHeaderHeight(IntPtr hGrid, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetColumnWidth(IntPtr hGrid, int col, int width);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetFreezeHeader(IntPtr hGrid, int freeze);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetColumnHeaderAlignment(IntPtr hGrid, int col, int align);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetColumnCellAlignment(IntPtr hGrid, int col, int align);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetCellClickCallback(IntPtr hGrid, DataGridCellCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetCellDoubleClickCallback(IntPtr hGrid, DataGridCellCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetSelectionChangedCallback(IntPtr hGrid, DataGridCellCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetColumnHeaderClickCallback(IntPtr hGrid, DataGridColumnHeaderCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetCellValueChangedCallback(IntPtr hGrid, DataGridCellCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_Enable(IntPtr hGrid, int enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_Show(IntPtr hGrid, int show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_SetBounds(IntPtr hGrid, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void DataGrid_Refresh(IntPtr hGrid);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateTreeView(IntPtr parent, int x, int y, int width, int height, uint bgColor, uint textColor, IntPtr callbackContext);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int AddRootNode(IntPtr hTreeView, byte[] textBytes, int textLen, byte[] iconBytes, int iconLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int AddChildNode(IntPtr hTreeView, int parentId, byte[] textBytes, int textLen, byte[] iconBytes, int iconLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ExpandNode(IntPtr hTreeView, int nodeId);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CollapseNode(IntPtr hTreeView, int nodeId);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ExpandAll(IntPtr hTreeView);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CollapseAll(IntPtr hTreeView);
